--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,29 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.board-item {
+    .board-actions {
+        display: none;
+    }
+    &:has(:hover, :focus) {
+        .board-actions {
+            display: flex;
+        }
+    }
+}
+.username-actions {
+    @apply hidden;
+}
+.username {
+    @apply relative w-[200px];
+
+    &:hover {
+        .username-actions {
+            @apply flex p-3;
+        }
+        & > p {
+            @apply to-blue-600;
+        }
+    }
+}
